# python-stocks

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  HistoricData.py  Makefile  README.md  StockData.py  TradingDay.py  TradingHistory.py  data_loading.py  doug_basic_strategies.py  dougs_strategies.py  main.py  math_helper.py  pyproject.toml  pyrightconfig.json  run_strategies.py  strategies.py  test.py
.github/workflows/: ci.yml  (+6 more)
configs/: buy_and_hold.sh  ma_crossover.sh  momentum.sh
docs/: about.md  dashboards.md  index.md  market_data.md  methodology.md  release_process.md  strategies.md  strategy_summary.csv  strategy_summary.json  tutorials.md
gh-pages-branch/: dashboards.md  index.md  strategy_summary.csv
python_stocks/: cli.py  data_loading.py  dougs_strategies.py  interactive_charts.py  main.py  market_data.py  math_helper.py  plotting.py  run_strategies.py  stock_data.py  strategy_registry.py  trading_history.py
python_stocks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
raw_data/: HistoricalQuotes_DIA.csv  HistoricalQuotes_NDAQ.csv  HistoricalQuotes_SPY.csv  SPY.csv  TQQQ.csv
scripts/: build_dashboard_preview.py  generate_artifacts.py  refresh_daily_data.py
tests/: conftest.py  test_dashboard_accessibility.py  test_dashboard_metadata.py  test_dashboard_narrative.py  test_dashboard_smoke.py  test_data_loading.py  test_figures_snapshot.py  test_market_data_pipeline.py  test_math_helper.py  test_plotting.py  test_services_engine.py  test_simulator.py  test_stock_data.py  test_strategies.py  test_trading_history.py
(+34 files in other folders)
