[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-stocks"
version = "0.1.0"
description = "Trading strategy simulations on historical stock data"
authors = [{ name = "Unknown" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scipy",
    "dash",
    "plotly",
    "kaleido",
]

[tool.setuptools.packages.find]
include = ["python_stocks"]
exclude = ["configs", "configs.*"]

[project.scripts]
python-stocks = "python_stocks.cli:main"

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "python_stocks.dashboard.*",
    "tests.test_dashboard_smoke",
    "tests.test_dashboard_accessibility",
]
ignore_errors = true
